# lagrangian2eom

./: .gitignore  README.md  pyproject.toml
src/lagrangian2eom/: __init__.py  lagrangian2eom.py
